mock floating view implementation (for now)

--- a/app/src/main/res/layout/view_floating_words.xml
+++ b/app/src/main/res/layout/view_floating_words.xml
@@ -12,61 +12,94 @@
     android:orientation="vertical"
     android:soundEffectsEnabled="true"
     android:splitMotionEvents="false"
-    tools:background="@android:color/holo_orange_dark"
-    android:layout_marginTop="100dp"
+    tools:background="@android:color/holo_green_light"
     >
 
-  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
-      android:id="@+id/textview_word_auxilliary_1"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:type="auxiliary"
-      tools:text="testtext"
-      tools:visibility="visible"
-      />
-  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
-      android:id="@+id/textview_word_auxilliary_2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:type="auxiliary"
-      tools:text="testtext"
-      tools:visibility="visible"
-      />
-  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
-      android:id="@+id/textview_word_auxilliary_3"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:visibility="gone"
-      app:type="auxiliary"
-      tools:text="testtext"
-      tools:visibility="visible"
-      />
+  <LinearLayout
+      android:layout_width="395dp"
+      android:layout_height="587dp"
+      android:orientation="vertical"
+      app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginTop="8dp"
+      android:layout_marginLeft="8dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginBottom="8dp"
+      android:layout_marginRight="8dp"
+      app:layout_constraintRight_toRightOf="parent"
+      >
 
-  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
-      android:id="@+id/textview_word_primary_1"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:type="primary"
-      tools:text="testtext"
-      tools:visibility="visible"
-      />
+    <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
+        android:id="@+id/textview_word_auxilliary_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:type="auxiliary"
+        tools:text="das"
+        tools:visibility="visible"
+        />
+    <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
+        android:id="@+id/textview_word_primary_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:type="primary"
+        tools:layout_editor_absoluteY="71dp"
+        tools:text="das"
+        tools:visibility="visible"
+        />
 
-  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
-      android:id="@+id/textview_word_primary_2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:type="primary"
-      tools:text="testtext"
-      tools:visibility="visible"
-      />
+    <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
+        android:id="@+id/textview_word_auxilliary_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:type="auxiliary"
+        tools:layout_editor_absoluteY="237dp"
+        tools:text="das"
+        tools:visibility="visible"
+        />
+    <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
+        android:id="@+id/textview_word_primary_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="23dp"
+        app:type="primary"
+        tools:text="das"
+        tools:visibility="visible"
+        />
 
-  <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
-      android:id="@+id/textview_word_primary_3"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:type="primary"
-      tools:text="testtext"
-      tools:visibility="visible"
-      />
+    <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
+        android:id="@+id/textview_word_auxilliary_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:visibility="gone"
+        app:type="auxiliary"
+        tools:text="das"
+        tools:visibility="visible"
+        />
+    <com.android.szparag.saymyname.views.widgets.FloatingWordTextView
+        android:id="@+id/textview_word_primary_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="55dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:type="primary"
+        tools:text="das"
+        tools:visibility="visible"
+        />
+
+  </LinearLayout>
 
 </com.android.szparag.saymyname.views.widgets.overlays.SaymynameFloatingWordsView>
