--- a/saymyname-app/src/main/res/values/colors.xml
+++ b/saymyname-app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
   <color name="floatingwords_primary_text_shadow">@color/saymyname_white_primary</color>
 
 
+  <color name="saymyname_white_android">@android:color/white</color>
   <color name="saymyname_white_primary">#f9f9f9</color>
   <color name="saymyname_white_light">#ffffff</color>
   <color name="saymyname_white_dark">#c6c6c6</color>
