--- a/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
+++ b/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
   <include
@@ -42,6 +44,15 @@
   </LinearLayout>
 
 
+  <FrameLayout
+      android:id="@+id/layout_single_photo_details"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:animateLayoutChanges="true"
+      android:background="@color/saymyname_blue_alpha_light"
+      tools:background="@color/saymyname_blue_light"
+      app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+      />
 
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
