--- a/saymyname-app/src/main/res/layout/activity_historical_entries.xml
+++ b/saymyname-app/src/main/res/layout/activity_historical_entries.xml
@@ -10,16 +10,12 @@
 
   <android.support.v7.widget.RecyclerView
       android:id="@+id/recyclerview_historical_images_words"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginLeft="0dp"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
       app:layout_constraintLeft_toLeftOf="parent"
-      android:layout_marginRight="0dp"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
-      android:layout_marginBottom="0dp"
       app:layout_constraintTop_toTopOf="parent"
-      android:layout_marginTop="0dp"
       />
 
 </android.support.constraint.ConstraintLayout>
