--- a/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
+++ b/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
   <include
@@ -13,11 +14,21 @@
       android:layout_height="match_parent"
       />
 
+  <include
+      android:id="@+id/fullscreen_message_info"
+      layout="@layout/layout_fullscreen_message_info"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:visibility="gone"
+      tools:visibility="visible"
+      />
+
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >
+
     <include
         layout="@layout/layout_realtime_camera_preview_hud_upper"
         android:layout_width="match_parent"
@@ -50,8 +61,9 @@
       android:layout_height="match_parent"
       android:animateLayoutChanges="true"
       android:background="@color/saymyname_blue_alpha_light"
-      tools:background="@color/saymyname_blue_light"
       app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+      tools:background="@color/saymyname_blue_light"
+      tools:visibility="gone"
       />
 
 
