--- a/saymyname-app/src/main/res/layout/activity_historical_entries.xml
+++ b/saymyname-app/src/main/res/layout/activity_historical_entries.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.android.szparag.saymyname.views.activities.HistoricalEntriesActivity"
@@ -19,3 +27,15 @@
       />
 
 </android.support.constraint.ConstraintLayout>
+
+  <android.support.design.widget.NavigationView
+      android:id="@+id/navigation_view"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_gravity="start"
+      app:elevation="6dp"
+      app:menu="@menu/menu_main"
+      />
+  <!--app:headerLayout="@layout/header"-->
+
+</android.support.v4.widget.DrawerLayout>
