--- a/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
+++ b/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,63 +9,80 @@
     android:layout_height="match_parent"
     >
 
-  <include
-      layout="@layout/layout_realtime_camera_preview_surface"
+  <android.support.design.widget.CoordinatorLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      />
-
-  <include
-      android:id="@+id/fullscreen_message_info"
-      layout="@layout/layout_fullscreen_message_info"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:visibility="gone"
-      tools:visibility="visible"
-      />
-
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
       >
 
     <include
-        layout="@layout/layout_realtime_camera_preview_hud_upper"
+        layout="@layout/layout_realtime_camera_preview_surface"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_height="match_parent"
         />
-
 
     <include
-        layout="@layout/view_floating_words"
+        layout="@layout/layout_fullscreen_message_info"
+        android:id="@+id/fullscreen_message_info"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+      <include
+          layout="@layout/layout_realtime_camera_preview_hud_upper"
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          android:layout_weight="4"
+          />
+
+
+      <include
+          layout="@layout/view_floating_words"
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          android:layout_weight="9"
+          />
+
+
+      <include
+          layout="@layout/layout_realtime_camera_preview_hud_lower"
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          android:layout_weight="4"
+          />
+
+    </LinearLayout>
+
+
+    <FrameLayout
+        android:id="@+id/layout_single_photo_details"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
+        android:background="@color/saymyname_blue_alpha_light"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        tools:background="@color/saymyname_blue_light"
+        tools:visibility="gone"
         />
 
 
-    <include
-        layout="@layout/layout_realtime_camera_preview_hud_lower"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        />
+  </android.support.design.widget.CoordinatorLayout>
 
-  </LinearLayout>
-
-
-  <FrameLayout
-      android:id="@+id/layout_single_photo_details"
-      android:layout_width="match_parent"
+  <android.support.design.widget.NavigationView
+      android:id="@+id/navigation_view"
+      android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:animateLayoutChanges="true"
-      android:background="@color/saymyname_blue_alpha_light"
-      app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-      tools:background="@color/saymyname_blue_light"
-      tools:visibility="gone"
+      android:layout_gravity="start"
+      app:elevation="6dp"
+      app:menu="@menu/menu_main"
       />
+  <!--app:headerLayout="@layout/header"-->
 
-
-</android.support.design.widget.CoordinatorLayout>
+</android.support.v4.widget.DrawerLayout>
