--- a/saymyname-app/src/main/res/menu/menu_main.xml
+++ b/saymyname-app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,76 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.android.szparag.saymyname.MainActivity">
-  <item
-      android:id="@+id/action_settings"
-      android:orderInCategory="100"
-      android:title="@string/action_settings"
-      app:showAsAction="never"/>
+
+  <group
+      android:checkableBehavior="none"
+      >
+
+    <item
+        android:id="@+id/menu_action_settings"
+        android:checkable="false"
+        android:checked="false"
+        android:icon="@drawable/ic_action_menu_settings_dark"
+        android:orderInCategory="1"
+        android:title="@string/action_settings"
+        app:showAsAction="always|withText"/>
+
+    <item
+        android:id="@+id/menu_action_achievements"
+        android:checkable="false"
+        android:checked="false"
+        android:icon="@drawable/ic_action_menu_achievements"
+        android:orderInCategory="2"
+        android:title="@string/action_achievements"
+        app:showAsAction="always|withText"/>
+
+    <item
+        android:id="@+id/menu_action_tutorial"
+        android:checkable="false"
+        android:checked="false"
+        android:icon="@drawable/ic_action_menu_tutorial"
+        android:orderInCategory="3"
+        android:title="@string/action_tutorial"
+        app:showAsAction="always|withText"/>
+
+
+    <item
+        android:id="@+id/menu_action_upgradedonate"
+        android:checkable="false"
+        android:checked="false"
+        android:icon="@drawable/ic_action_menu_upgrade"
+        android:orderInCategory="4"
+        android:title="@string/action_upgradedonate"
+        app:showAsAction="always|withText"/>
+
+    <item
+        android:id="@+id/menu_action_about"
+        android:checkable="false"
+        android:checked="false"
+        android:icon="@drawable/ic_action_menu_about"
+        android:orderInCategory="5"
+        android:title="@string/action_about"
+        app:showAsAction="always|withText"/>
+
+
+    <item
+        android:id="@+id/menu_action_opensource"
+        android:checkable="false"
+        android:checked="false"
+        android:icon="@drawable/ic_action_menu_opensource"
+        android:orderInCategory="6"
+        android:title="@string/action_opensource"
+        app:showAsAction="always|withText"/>
+
+    <item
+        android:id="@+id/menu_action_helpfeedback"
+        android:checkable="false"
+        android:checked="false"
+        android:icon="@drawable/ic_action_help_feedback"
+        android:orderInCategory="7"
+        android:title="@string/action_helpfeedback"
+        app:showAsAction="always|withText"/>
+
+  </group>
+
 </menu>
