--- a/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
+++ b/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
@@ -60,16 +60,12 @@
 
     </LinearLayout>
 
-
-    <FrameLayout
-        android:id="@+id/layout_single_photo_details"
+    <include
+      layout="@layout/layout_single_photo_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:background="@color/saymyname_blue_alpha_light"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-        tools:background="@color/saymyname_blue_light"
-        tools:visibility="gone"
         />
 
 
