--- a/saymyname-app/src/main/res/layout/layout_single_photo_details.xml
+++ b/saymyname-app/src/main/res/layout/layout_single_photo_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.android.szparag.saymyname.views.widgets.overlays.BottomSheetSinglePhotoDetails
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -142,4 +142,4 @@
   </LinearLayout>
 
 
-</FrameLayout>
+</com.android.szparag.saymyname.views.widgets.overlays.BottomSheetSinglePhotoDetails>
