--- a/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
+++ b/saymyname-app/src/main/res/layout/activity_realtime_camera_preview.xml
@@ -63,7 +63,7 @@
     <include
       layout="@layout/layout_single_photo_details"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="487dp"
         android:animateLayoutChanges="true"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
         />
