--- a/saymyname-app/src/main/res/layout/activity_splash_screen.xml
+++ b/saymyname-app/src/main/res/layout/activity_splash_screen.xml
@@ -8,4 +8,33 @@
     tools:context="com.android.szparag.saymyname.views.activities.SplashScreenActivity"
     >
 
+  <ProgressBar
+      android:id="@+id/progressBar2"
+      android:layout_width="128dp"
+      android:layout_height="128dp"
+      android:layout_marginBottom="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      style="?android:attr/progressBarStyle"
+      />
+  <ImageView
+      android:id="@+id/imageView2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:layout_marginTop="8dp"
+      android:tint="@color/colorAccent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/ic_action_camera_dark"
+      />
 </android.support.constraint.ConstraintLayout>
