--- a/saymyname-app/src/main/res/layout/layout_single_photo_details.xml
+++ b/saymyname-app/src/main/res/layout/layout_single_photo_details.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
+    android:layout_marginBottom="@dimen/saymyname_dimen_huge"
     android:background="@color/saymyname_blue_alpha_light"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     tools:background="@color/saymyname_blue_light"
