--- a/saymyname-app/src/main/res/layout/view_floating_words.xml
+++ b/saymyname-app/src/main/res/layout/view_floating_words.xml
@@ -15,6 +15,19 @@
     tools:background="@android:color/holo_green_light"
     >
 
+  <View
+      android:id="@+id/view_loading_halo_container"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      android:background="@drawable/shape_fullscreen_border"
+      android:visibility="gone"
+      tools:visibility="visible"
+      />
+
   <LinearLayout
       android:layout_width="395dp"
       android:layout_height="587dp"
