--- a/saymyname-app/src/main/res/layout/layout_realtime_camera_preview_surface.xml
+++ b/saymyname-app/src/main/res/layout/layout_realtime_camera_preview_surface.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<SurfaceView
+<com.android.szparag.saymyname.views.widgets.SaymynameCameraSurfaceView
     android:id="@+id/surfaceview_realtime_camera"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
