REFORMAT CODE SQUARE ANDROID STYLE

--- a/saymyname-app/src/main/res/drawable/shape_fullscreen_border.xml
+++ b/saymyname-app/src/main/res/drawable/shape_fullscreen_border.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
   <stroke
-      android:width="@dimen/hud_margin_uniform_small"
-      android:color="@color/colorPrimary"/>
+      android:color="@color/colorPrimary"
+      android:width="@dimen/hud_margin_uniform_small"/>
 
 </shape>
