--- a/saymyname-app/src/main/res/anim/translate_wobble.xml
+++ b/saymyname-app/src/main/res/anim/translate_wobble.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate android:duration="1000"
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="1000"
     android:fromXDelta="-10%"
     android:repeatCount="infinite"
     android:repeatMode="reverse"
-    android:toXDelta="10%"
-    xmlns:android="http://schemas.android.com/apk/res/android"/>
+    android:toXDelta="10%"/>
