--- a/saymyname-app/src/main/res/drawable/drawable_lang_model_selector_background.xml
+++ b/saymyname-app/src/main/res/drawable/drawable_lang_model_selector_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
-    xmlns="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns="http://schemas.android.com/apk/res-auto">
 
   <stroke
       android:color="@color/saymyname_white_light"
